plugins {
    id("org.springframework.boot") version "4.1.0" apply false
    id("io.spring.dependency-management") version "1.1.7" apply false
    id("com.diffplug.spotless") version "8.10.1" apply false
}

allprojects {
    group = "co.tecnosport"
    version = "0.0.1-SNAPSHOT"

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply(plugin = "java-library")
    apply(plugin = "io.spring.dependency-management")
    apply(plugin = "com.diffplug.spotless")

    configure<JavaPluginExtension> {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(21))
        }
    }

    // Sin esto, Spring MVC no puede resolver @PathVariable/@RequestParam por
    // nombre de parámetro (javac no lo conserva por defecto) sin anotar cada
    // uno explícitamente. Recomendación estándar de Spring Boot.
    tasks.withType<JavaCompile>().configureEach {
        options.compilerArgs.add("-parameters")
    }

    configure<io.spring.gradle.dependencymanagement.dsl.DependencyManagementExtension> {
        imports {
            mavenBom("org.springframework.boot:spring-boot-dependencies:4.1.0")
            // spring-boot-dependencies importa testcontainers-bom de forma anidada (import
            // dentro de import) y el plugin de dependency-management no sigue esa cadena.
            // Versión tomada del propio POM de spring-boot-dependencies:4.1.0
            // (propiedad testcontainers.version), no inventada.
            mavenBom("org.testcontainers:testcontainers-bom:2.0.5")
        }
    }

    configure<com.diffplug.gradle.spotless.SpotlessExtension> {
        java {
            googleJavaFormat()
            removeUnusedImports()
            trimTrailingWhitespace()
            endWithNewline()
        }
    }

    dependencies {
        "testImplementation"("org.junit.jupiter:junit-jupiter")
        "testRuntimeOnly"("org.junit.platform:junit-platform-launcher")
    }

    tasks.withType<Test> {
        useJUnitPlatform()
    }
}
